--- a/GlucoMan.Maui/AppShell.xaml
+++ b/GlucoMan.Maui/AppShell.xaml
@@ -4,12 +4,10 @@
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:local="clr-namespace:GlucoMan.Maui"
-    Shell.FlyoutBehavior="Disabled"
-    Shell.BackgroundColor="DarkBlue"
-    >
+    Shell.FlyoutBehavior="Disabled">
 
     <ShellContent
-        Title="GlucoMan"
+        Title="GlucoMan - Glucose Manager" 
         ContentTemplate="{DataTemplate local:MainPage}"
-        Route="MainPage" />
+        Route="MainPage"/>
 </Shell>
