--- a/GlucoMan.Maui/FoodsPage.xaml
+++ b/GlucoMan.Maui/FoodsPage.xaml
@@ -3,31 +3,29 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="GlucoMan.Maui.FoodsPage"
              Title="Foods">
-    <ContentPage.Content ItemsSource="{Binding}">
-        <Grid Padding="8,0,8,0" RowDefinitions="20,20,65,20,65,20,65,65,*"
-              ColumnDefinitions="*,*,*,*">
-
+    <ContentPage.Content>
+        <Grid Grid.RowDefinitions="20,20,45,20,50,20,60,60,*"
+            Grid.ColumnDefinitions="*, *, *, *">
             <Label Grid.Row="0" Grid.Column="0" TextColor="Black" 
-                Grid.ColumnSpan="4" Text="Foods' information" 
+                Grid.ColumnSpan="4" Text="Food's information" 
                     HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
-
             <Label Grid.Row="1" Grid.Column="2" Text="Id food" 
                 HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
             <Label Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2"  Text="Name of food" 
                 HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
 
-            <Label Grid.Row="2" Grid.Column="2" x:Name="lblIdFood" BackgroundColor="White" 
-                   FontSize="Medium" HorizontalTextAlignment="Center" VerticalTextAlignment="Center"
-                   Text = "{Binding IdFood}"/>
+            <Entry Grid.Row="2" Grid.Column="1" x:Name="txtIdFood" BackgroundColor="White" 
+                    FontSize="Medium" HorizontalTextAlignment="Center" 
+                    IsReadOnly="true"/>
             <Entry Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2" 
                     x:Name="txtName" BackgroundColor="LightGreen" 
                     Keyboard="Text" TextChanged="txtName_TextChanged"
-                    FontSize="Medium" HorizontalTextAlignment="Center" 
-                    Text= "{Binding Name}"/>
+                    HorizontalTextAlignment="Start" VerticalTextAlignment="Center"
+                    FontSize="Small" IsReadOnly="false"/>
             <Button Grid.Row="2" Grid.Column="3" x:Name="btnChoose" Text="Choose" 
                     Clicked="btnChoose_Click"></Button>
 
-            <Label Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="4" Margin="0,0,10,0"
+            <Label Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="4" Margin="2,0,10,0"
                     Text="Description of food" HorizontalTextAlignment="Start" VerticalTextAlignment="End"/>
 
             <Entry Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="4" 
@@ -39,8 +37,8 @@
             <Label Grid.Row="5" Grid.Column="0" Text="CHO [g]%" HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
 
             <Entry Grid.Row="6" Grid.Column="0" x:Name="txtFoodCarbohydrates" BackgroundColor="GreenYellow"
-                Keyboard="Numeric" FontSize="Medium" HorizontalTextAlignment="End"
-                   Text = "{Binding Cho.Text}"/>
+                Keyboard="Numeric" HorizontalTextAlignment="End"
+                   FontSize="Large" Text = "{Binding Cho.Text}"/>
             <Button Grid.Row="6" Grid.Column="2" Text="+" x:Name="btnAddFood" 
                     Clicked="btnAddFood_Click"></Button>
             <Button Grid.Row="6" Grid.Column="3" Text="-" x:Name="btnRemoveFood" 
@@ -50,13 +48,13 @@
                     Clicked="btnSaveFood_Click"></Button>
             <Button Grid.Row="7" Grid.Column="1" Text="Details" x:Name="btnFoodDetails" 
                     Clicked="btnFoodDetails_Click"></Button>
-            <Button Grid.Row="7" Grid.Column="2" Text="Clean Fields" x:Name="btnCleanFields" 
-                    Clicked="btnCleanFields_Click"></Button>
+            <Button Grid.Row="7" Grid.Column="2" Text="Clean&#10;Fields" x:Name="btnCleanFields" 
+                    Clicked="btnCleanFields_Click" LineBreakMode="WordWrap"></Button>
             <Button Grid.Row="7" Grid.Column="3" Text="Search" x:Name="btnSearchFood" 
                     Clicked="btnSearchFood_Click"></Button>
 
-            <ListView x:Name="gridFoods" Grid.Row="8" Grid.Column="0" Grid.ColumnSpan="4" ItemsSource="{Binding}"
-                    ItemSelected="OnGridSelectionAsync">
+            <ListView Grid.Row="8" Grid.Column="0" Grid.ColumnSpan="4" x:Name="gridFoods" 
+                      ItemsSource="{Binding}" ItemSelected="OnGridSelectionAsync">
                 <!-- description of data to be shown, in a DataTemplate -->
                 <ListView.ItemTemplate>
                     <DataTemplate>
@@ -64,16 +62,14 @@
                             <ViewCell.View>
                                 <Grid Margin="8">
                                     <Grid.RowDefinitions>
-                                        <RowDefinition Height="20"/>
+                                        <RowDefinition Height="18"/>
                                     </Grid.RowDefinitions>
                                     <Grid.ColumnDefinitions>
-                                        <ColumnDefinition Width="150"/>
                                         <ColumnDefinition />
                                         <ColumnDefinition Width="35"/>
                                     </Grid.ColumnDefinitions>
                                     <Label HorizontalTextAlignment="Start" Grid.Column="0" Text="{Binding Name}" />
-                                    <Label HorizontalTextAlignment="Start" Grid.Column="1" Text="{Binding Description}"/>
-                                    <Label HorizontalTextAlignment="Center" Grid.Column="2" Text="{Binding Cho.Text}"/>
+                                    <Label HorizontalTextAlignment="Center" Grid.Column="1" Text="{Binding Cho.Text}"/>
                                 </Grid>
                             </ViewCell.View>
                         </ViewCell>
